--- a/stylesheet/inicio.css
+++ b/stylesheet/inicio.css
@@ -77,5 +77,15 @@
         article {
             width: 100%;
             height: auto;
+            font-size: 16px;
+        }
+    }
+
+    @media (max-width: 800px) {
+        nav,
+        article {
+            width: 100%;
+            height: auto;
+            font-size: 16px;
         }
     }
